Added calendar page. It doesn't do anything more than display an iframe with google calendar. The menu icon does not get the 'active' class.

--- a/templates/base.html
+++ b/templates/base.html
@@ -71,7 +71,7 @@
 	    <li{% if 'practice' in request.get_full_path %} class="active"{% endif %}><a href="/practice/">Practice</a></li>
 	    <li{% if 'worksheet' in request.get_full_path %} class="active"{% endif %}><a href="/worksheet/">Worksheet</a></li>
 	    <li{% if 'minutes' in request.get_full_path %} class="active"{% endif %}><a href="/minutes/">Minutes</a></li>
-	    <li{% if 'TODO' in request.get_full_path %} class="active"{% endif %}><a href="#">Calendar</a></li>
+	    <li{% if 'calendar' in request.get_full_path %} class="active"{% endif %}><a href="/calendar/">Calendar</a></li>
 	    <li{% if 'savings' in request.get_full_path %} class="active"{% endif %}><a href="/savings/">Savings</a></li>
 	    <li{% if 'TODO' in request.get_full_path %} class="active"{% endif %}><a href="#">Misc</a></li>
 	  </ul>
