--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -9,13 +9,13 @@
 }
 iframe
 {
-    height: 100%;
+    height: 500px;
     width: 100%;
+    border-style: none;
     margin-left: auto;
-    margin-right: auto;
-    
+    margin-right: auto;    
 }
 {% endblock %}
 {% block content %}
-<iframe src="https://www.google.com/calendar/embed?src=artiosband%40gmail.com&ctz=America/New_York"></iframe>
+<iframe src="{{source}}"></iframe>
 {% endblock %}
