--- a/templates/error.html
+++ b/templates/error.html
@@ -1,7 +1,7 @@
 <html>
   <head><title>{% block title %}Error{% endblock %}</title></head>
   <body>
-    <h3>Oops...something went wrong</h3>
+    <h3>Oops...something went wrong!</h3>
     <h3>{% block error %}Your request cannot be completed. Sorry.{% endblock %}</h3>
     <p>Check the URI for errors and refresh or return <a href="/">home</a>.</p>
     <img src="http://artiosband.com/static/404.jpg" style="display: block; margin-left: auto; margin-right: auto;"/>
