Began work on "songs" module. This module will track lists of all the songs known to the bands. So far I have skeleton pages in place. The model is mostly complete along with the admin.py. Also added the entry to main urls.py and the menu entry to base.html. Change to worksheet/models.py should be only trivial (whitespace).
Still needs commenting, full view functionality and most of the template
content.

--- a/templates/base.html
+++ b/templates/base.html
@@ -82,6 +82,7 @@
 	    </li>
 	    <li{% if 'savings' in request.get_full_path %} class="active"{% endif %}><a href="/savings/">Savings</a></li>
 	    <li{% if 'TODO' in request.get_full_path %} class="active"{% endif %}><a href="#">Misc</a></li>
+	    <li{% if 'songs' in request.get_full_path %} class="active"{% endif %}><a href="/songs/">Songs</a></li>
 	  </ul>
 	  <ul class="nav pull-right">
 	    <li class="pull-right"><a href="/admin/">Admin</a></li>
