Finished most of the HTML/Django coding for the song module
This includes adding edit forms for the details and lyrics/chords.
Much of the views.py code was condensed to remove redundancy.
Lyrics/chord/details are now all handled by one view and another
for editing them. Still need to get the correct sort order for the
standard details view.

--- a/templates/error.html
+++ b/templates/error.html
@@ -3,7 +3,7 @@
   <body>
     <h3>Oops...something went wrong!</h3>
     <h3>{% block error %}Your request cannot be completed. Sorry.{% endblock %}</h3>
-    <p>Check the URI for errors and refresh or return <a href="/">home</a>.</p>
+    <p>Check the URI for errors and try again or return <a href="/">home</a>.</p>
     <img src="http://artiosband.com/static/404.jpg" style="display: block; margin-left: auto; margin-right: auto;"/>
   </body>
 </html
