--- a/templates/song_list.html
+++ b/templates/song_list.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-<a href="add/">Add</a>
+<a class="btn" href="add/">Add</a>
 <table>
   <tr>
     <th>Title</th>
