Minor fix that ensure song details retain the order specified in views.py

--- a/templates/song_details.html
+++ b/templates/song_details.html
@@ -18,9 +18,8 @@
   <li><a href="/songs/{{song.id}}/chords/">Chords</a></li>
 </ul>
 <dl>
-  {% for key, value in details_list %}
-  <dt>{{ key }}&nbsp;</dt>
-  <dd>{{ value|linebreaksbr }}&nbsp;</dd>
+  {% for detail in details_list %}
+  {% cycle '<dt>' '<dd>' %}{{ detail }}{% cycle '</dt>' '</dd>' %}
   {% endfor %}
 </dl>
 {% endif %}
