Switched some links to buttons and added search functions. Note these functions are not utilized yet, merely copy/pasted from a website: http://julienphalip.com/post/2825034077/adding-search-to-a-django-site-in-a-snap

--- a/templates/song_list.html
+++ b/templates/song_list.html
@@ -16,9 +16,9 @@
     <td>{{song.key}}</td>
     <td>{{song.band_singer}}</td>
     <td>{{song.status}}</td>
-    <td><a href="{{song.id}}/modify/">Edit</a></td>
-    <td><a href="{{song.id}}/lyrics/">Lyrics</a></td>
-    <td><a href="{{song.id}}/chords/">Chords</a></td>
+    <td><a href="{{song.id}}/modify/" class="btn">Edit</a></td>
+    <td><a href="{{song.id}}/lyrics/" class="btn">Lyrics</a></td>
+    <td><a href="{{song.id}}/chords/" class="btn">Chords</a></td>
   </tr>
 {% endfor %}
 </table>
