--- a/templates/base.html
+++ b/templates/base.html
@@ -86,7 +86,7 @@
 	  </ul>
 	  <ul class="nav pull-right">
 	    <li class="pull-right"><a href="/admin/">Admin</a></li>
-	    <li class="pull-right"><a href="/accounts/logout/">Logout</a></li>
+	    <li class="pull-right">{% if user.is_authenticated %}<a href="/accounts/logout/">Logout ({{request.user.first_name}}){% else %}<a href="/accounts/login/?next={{request.get_full_path}}">Login{% endif %}</a></li>
 	  </ul>
       </div>
     </div>
