Added the navigation bar to the login and loggedout pages. Also added a column heading to the song_list.html page for action buttons.

--- a/templates/registration/logged_out.html
+++ b/templates/registration/logged_out.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block nav %}<!-- The nav menu is not visible because this page is displayed upon logging out -->{% endblock %}
+{% block script %}/* Javascript removed for loggedout page */{% endblock %}
 {% block content %}
 You have successfully logged out. Return to <a href="/">home</a>.
 {% endblock %}
