--- a/templates/song_details.html
+++ b/templates/song_details.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %}
+{#% block external_style %}{% endblock %#}
+{#% block style %}{% endblock %#}
 {% block content %}
+<a href="/songs/">&lt;&lt;Back to song list</a>
 <h2><a href="/songs/{{song.id}}/">{{ title }}</a></h2>
 {% if form %}
 <form action="" method="POST">
@@ -12,11 +15,11 @@
 </form>
 {% else %}
 <ul>
-  <li><a href="/songs/">Song List</a></li>
-  <li><a href="modify/">Edit</a></li>
+  <li><a href="/songs/{{song.id}}/">Details</a></li>
   <li><a href="/songs/{{song.id}}/lyrics/">Lyrics</a></li>
   <li><a href="/songs/{{song.id}}/chords/">Chords</a></li>
 </ul>
+  <a href="modify/" class="btn">Edit</a>
 <dl>
   {% for detail in details_list %}
   {% cycle '<dt>' '<dd>' %}{{ detail|linebreaksbr }}{% cycle '</dt>' '</dd>' %}
