--- a/templates/base.html
+++ b/templates/base.html
@@ -47,6 +47,10 @@
     	padding-left: 5px;
     	padding-right: 5px;
     }
+    .navbar
+    {
+	min-width: 710px;
+    }
     {% endblock %}
     </style>
     {% block external_scripts %}
