Added views/forms to allow the user to create a new setlist. Also added @login_required decorators to "arrange" and "populate" views for setlists.
Templates have been modified to include buttons for this
functionality. Changes do not modify database schema.

--- a/templates/setlist_detail.html
+++ b/templates/setlist_detail.html
@@ -12,6 +12,7 @@
 {% endblock %}
 {% block content %}
 <a href="/songs/setlists/">&lt;&lt;Back to setlists</a><br />
+{% if function == None %}<a href="edit/" class="btn">Edit</a>{% endif %}<br />
 Show: {{ setlist.name }}<br>
 Date: {{ setlist.date }}<br>
 Venue: {{ setlist.location }}<br>
